# augmento

./: .gitignore  README.md  app.json  create_radio_promo_mp3.py  package-lock.json  package.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/core/: config.py
backend/app/media/: __init__.py  processor.py  selection.py
backend/app/routes/: __init__.py  augment.py
backend/assets/: README.md  promotion.mpeg
backend/tests/: test_health.py
scripts/: start-dev.sh
src/app/: index.tsx
src/data/: demo-content.ts
src/lib/: augment-api.ts
